Node version of server and some styling

--- a/web-client/style.css
+++ b/web-client/style.css
@@ -1,23 +1,61 @@
 body {
   background-color: #fff5e3;
   font-family: sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+}
+
+#message-container {
+  padding: 0 5%;
+  width: 100%;
+}
+
+h1 {
+  width: 100%;
+}
+
+#message-input {
+  width: 100%;
+  position: fixed;
+  top: 90%;
+  height: 10%;
+  display: flex;
+  background-color: #a0a0a0f7;
 }
 
 #message-text-box {
-  width: 500px;
-  height: 50px;
-  border-radius: 8px;
+  width: 90%;
+  border: none;
+  border-radius: 20px 0 0 20px;
+  padding: 5px;
+  vertical-align: middle;
+  font-size: medium;
+  resize: none;
+  vertical-align: middle;
+}
+
+#message-text-box:focus {
+  outline: none;
 }
 
 #messages {
   display: flex;
   flex-direction:column;
-  width: 70%;
+  width: 100%;
   margin: auto;
 }
 
+#send-message-button {
+  width: 10%;
+  font-size: medium;
+}
+#send-message-button:hover {
+  opacity: 10%;
+}
+
 .message {
-  width: 25%;
+  width: 40%;
   flex-basis: 100%;
   border: 1px solid;
   padding: 1%;
