--- a/examples/videocall/templates/index.html
+++ b/examples/videocall/templates/index.html
@@ -28,7 +28,7 @@
 	<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 </head>
 <body>
-<h1>libdatachannel streamer example client</h1>
+<h1>Mi VideoChat example client</h1>
 
 <h2 id="my-id">haha<h2>
 
